--- a/package.json
+++ b/package.json
@@ -60,7 +60,16 @@
             "properties": {
                 "reproto.executable": {
                     "type": "string",
-                    "description": "reproto command or path to executable"
+                    "description": "path to reproto executable"
+                },
+                "reproto.type": {
+                    "type": "string",
+                    "default": "simple",
+                    "enum": [
+                        "language-client",
+                        "simple"
+                    ],
+                    "description": "type of integration (\"language-client\" or \"simple\")"
                 }
             }
         }
@@ -71,6 +80,9 @@
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    },
+    "dependencies": {
+        "vscode-languageclient": "^4.0.0"
     },
     "devDependencies": {
         "typescript": "^2.6.1",
