--- a/package.json
+++ b/package.json
@@ -98,13 +98,13 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "dependencies": {
-        "vscode-languageclient": "^4.0.0"
+        "vscode-languageclient": "^4.0.0",
+        "tar-stream": "^1.5.6"
     },
     "devDependencies": {
         "typescript": "^2.6.1",
         "vscode": "^1.1.6",
         "tslint": "^5.8.0",
-        "tar-stream": "^1.5.6",
         "@types/node": "^7.0.43",
         "@types/mocha": "^2.2.42"
     }
