--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
         "url": "https://github.com/reproto/reproto-vscode/issues"
     },
     "engines": {
-        "vscode": "^1.18.1"
+        "vscode": "^1.44.1"
     },
     "categories": [
         "Themes",
-        "Languages"
+        "Programming Languages"
     ],
     "keywords": [
         "reproto",
@@ -33,7 +33,7 @@
         "onLanguage:reproto",
         "onCommand:reproto.init"
     ],
-    "main": "./out/extension",
+    "main": "./out/src/extension",
     "contributes": {
         "languages": [
             {
@@ -63,14 +63,6 @@
                     "type": "string",
                     "description": "path to reproto executable"
                 },
-                "reproto.type": {
-                    "type": "string",
-                    "enum": [
-                        "language-client",
-                        "simple"
-                    ],
-                    "description": "type of integration (\"language-client\" or \"simple\")"
-                },
                 "reproto.debug": {
                     "type": "boolean",
                     "default": false,
@@ -91,21 +83,31 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
+        "vscode:prepublish": "tsc && rollup -c",
+        "package": "vsce package -o reproto.vsix",
+        "build": "tsc",
+        "watch": "tsc -watch",
+        "pretest": "npm run build",
+        "lint": "tsfmt --verify && eslint -c .eslintrc.js --ext ts ./src",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "dependencies": {
-        "vscode-languageclient": "^4.0.0",
-        "tar-stream": "^1.5.6"
+        "vscode-languageclient": "^6.1.3",
+        "tar-stream": "^2.1.2"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "tslint": "^5.8.0",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "@rollup/plugin-commonjs": "^13.0.0",
+        "@rollup/plugin-node-resolve": "^8.1.0",
+        "@types/mocha": "^7.0.2",
+        "@types/node": "^12.7.0",
+        "@types/tar-stream": "^2.1.0",
+        "@types/vscode": "^1.44.1",
+        "@typescript-eslint/eslint-plugin": "^3.4.0",
+        "@typescript-eslint/parser": "^3.4.0",
+        "eslint": "^7.3.1",
+        "rollup": "^2.18.1",
+        "typescript": "^3.9.6",
+        "typescript-formatter": "^7.2.2",
+        "vsce": "^1.75.0"
     }
 }
